# IM_prediction_transfer_learning

./: .pypirc  README.md  environment.yml  pyproject.toml  requirements.txt
src/IM_prediction_transfer_learning_benklerc/: testing.ipynb  transfer_learning_tool.py
src/IM_prediction_transfer_learning_benklerc/output_transfer_learning/evaluation/: evaluation_mobility_before_TF
transfer_learning/: settings_tl.yaml  testing.ipynb  transfer_learning_tool.py
